# forge-desktop

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  build_check.bat  dev.bat  dev.ps1  dev.sh  index.html  light.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/warm/: icon.icns
src-tauri/src/: commands_ext.rs  lib.rs  utils.rs
src-tauri/src/commands/: agent.rs  allagents_commands.rs  anthropic_skills.rs  backup.rs  cli_tools.rs  data_transfer.rs  file.rs  installed_registry.rs  mcp.rs  mcp_bridge.rs  mcp_manager.rs  mcp_marketplace.rs  mod.rs  plugin.rs  plugin_capabilities.rs  plugin_marketplace.rs  plugin_sync.rs  rule.rs  settings.rs  skill.rs  skill_import.rs  skill_marketplace.rs  skill_repository.rs  skills_sh.rs  software.rs  version_manager.rs
src-tauri/src/db/: connection.rs  kv_store.rs  mcp_tables.rs  mod.rs  schema.rs
src-tauri/src/models/: mcp_bridge.rs  mcp_marketplace.rs  mod.rs  plugin_capabilities.rs  plugin_marketplace.rs  skill_marketplace.rs
src-tauri/src/services/: allagents_service.rs  cli_tools.rs  file_service.rs  mcp_bridge.rs  mcp_protocol.rs  mod.rs  plugin_capabilities.rs  plugin_marketplace.rs  plugin_repo_sync.rs  (+3 more)
src-tauri/tests/: feat022_mcp_manager.rs  install_superpowers.rs  plugin_details_cache_layout.rs  plugin_details_e2e.rs
(+353 files in other folders)
