[package]
name = "forge-desktop"
version = "0.1.0"
description = "Forge - Manage AI tool configurations"
authors = ["Forge Team"]
edition = "2021"

[lib]
name = "forge_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "6.0"
walkdir = "2.5"
zip = "2.2"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
shell-words = "1.0"
base64 = "0.22"
futures = "0.3"
rayon = "1.10"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
url = "2.5"
urlencoding = "2.1"
lazy_static = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.12"
